--- a/video2.css
+++ b/video2.css
@@ -116,68 +116,78 @@ html, body {
   color:#fff;
 }
 
-
-@media (max-width: 768px) {
-  #main {
-    flex-direction: column;
-    height: auto;
-    overflow: auto;
+@media (max-width: 1024px) {
+  #part1,#part3 { 
+    display: none; 
   }
-
-  #part1,
-  #part2,
-  #part3 {
+ 
+  #part2 { 
     width: 100%;
-    height: 200px;
-  }
-
-  #part2 {
-    background-position: top;
-  }
+   }
 
   #text-div {
-    width: 90%;
-    left: 50%;
-    top: auto;
-    transform: translate(-50%, 0);
-    margin-top: 20px;
-    text-align: center;
+    width: 300px;
+    left: 5%;
   }
 
-  #text-div > h1 {
-    font-size: 40px;
-    line-height: 45px;
-    letter-spacing: 4px;
+  #text-div>h1 {
+    font-size: 65px;
+    line-height: 60px;
+    letter-spacing: 5px;
   }
 
   #small-img {
-    position: static;
-    width: 90%;
-    height: 200px;
-    margin: 20px auto;
-  }
-
-  #vertical-text {
-    position: static;
-    transform: none;
-    text-align: center;
-    margin-top: 20px;
+    height: 250px;
+    width: 200px;
+    right: 5%;
   }
 
   #vertical-text h1 {
-    font-size: 40px;
-    letter-spacing: 8px;
-    -webkit-text-stroke-width: 1px;
+    font-size: 50px;
+    letter-spacing: 10px;
   }
 
   #nav {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    left: 0;
-    top: 10px;
-    gap: 10px;
+    width: 300px;
+  }
+
+  #nav h5 {
+    font-size: 16px;
+  }
+
+@media (max-width: 768px) {
+  #part1, #part3 { 
+    display: none;
+   }
+  #part2 { 
+    width: 100%; 
+  }
+
+  #text-div {
+    width: 250px;
+    left: 5%;
+    top: 45%;
+  }
+
+  #text-div>h1 {
+    font-size: 45px;
+    line-height: 45px;
+    letter-spacing: 3px;
+  }
+
+  #small-img {
+    height: 200px;
+    width: 150px;
+    right: 5%;
+    top: 60%;
+  }
+
+  #vertical-text {
+    display: none;
+  }
+
+  #nav {
+    width: 250px;
   }
 
   #nav img {
@@ -185,10 +195,42 @@ html, body {
   }
 
   #nav h5 {
-    font-size: 16px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  #part1, #part3 { display: none; }
+  #part2 { width: 100%; }
+
+  #text-div {
+    width: 200px;
+    left: 5%;
+    top: 40%;
   }
 
-  .overlay {
-    height: 100%;
+  #text-div>h1 {
+    font-size: 32px;
+    line-height: 38px;
+    letter-spacing: 2px;
+  }
+
+  #small-img {
+    height: 150px;
+    width: 120px;
+    right: 5%;
+    top: 65%;
+  }
+
+  #nav {
+    width: 200px;
+  }
+
+  #nav img {
+    height: 30px;
+  }
+
+  #nav h5 {
+    font-size: 12px;
   }
 }
